# bulletfarm

./: .env.example  .gitignore  AGENTS.md  README.md
.opencode/agent/core/: openagent.md  opencoder.md
charts/bulletfarm-operator/: Chart.yaml  README.md  values.yaml
charts/bulletfarm-operator/crds/: agents.bulletfarm.io_agents.yaml  agents.bulletfarm.io_agenttasks.yaml
charts/bulletfarm-operator/templates/: NOTES.txt  _helpers.tpl  agents.yaml  agenttasks.yaml  deployment.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/elasticsearch/: elasticsearch-values.yaml  install-elasticsearch.sh
docs/: e2e-testing-detailed.md  e2e-testing.md  elasticsearch-install.md
operator/: .dockerignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  main.go
operator/api/v1alpha1/: agent_types.go  agenttask_types.go  groupversion_info.go  types.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/config/crd/: kustomization.yaml
operator/config/default/: kustomization.yaml
operator/config/manager/: manager.yaml
operator/config/rbac/: agent_admin_role.yaml  agent_editor_role.yaml  agent_viewer_role.yaml  agenttask_admin_role.yaml  agenttask_editor_role.yaml  (+3 more)
tests/e2e/: README.md  run.sh  setup.sh
worker/: Dockerfile  README.md  pyproject.toml
worker/src/: __init__.py  agent.py  config.py  github_tools.py  main.py  memory.py  models.py
worker/tests/: __init__.py  test_agent.py  test_main.py  test_memory_pipeline.py  test_models.py  test_retrieval_fallback.py
(+22 files in other folders)
